--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        scala {
+            srcDir 'src/main/java'
+        }
+    }
+}
+
 dependencies {
     // Libraries needed to run the scala tools
     scalaTools 'org.scala-lang:scala-compiler:2.9.2'
@@ -16,5 +24,5 @@ dependencies {
     compile 'org.w3c.css:sac:1.3'
 
     testCompile 'org.scalatest:scalatest_2.9.2:1.7.2'
-    testCompile 'junit:junit:4.9'
+    testCompile 'junit:junit:4.10'
 }
