--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,25 @@
 apply plugin: 'scala'
+apply plugin: 'idea'
 
 defaultTasks 'clean', 'build'
 
 version = '1.0'
 
+project.ext {
+    scalaVersion = '2.9.2'
+}
+
 repositories {
     mavenCentral()
 }
 
-sourceSets {
-    main {
-        scala {
-            srcDir 'src/main/java'
-        }
-    }
-}
-
 dependencies {
     // Libraries needed to run the scala tools
-    scalaTools 'org.scala-lang:scala-compiler:2.9.2'
-    scalaTools 'org.scala-lang:scala-library:2.9.2'
+    scalaTools "org.scala-lang:scala-compiler:$scalaVersion"
 
     // Libraries needed for scala api
-    compile 'org.scala-lang:scala-library:2.9.2'
-    compile 'org.w3c.css:sac:1.3'
+    compile "org.scala-lang:scala-library:$scalaVersion"
 
-    testCompile 'org.scalatest:scalatest_2.9.2:1.7.2'
+    testCompile "org.scalatest:scalatest_$scalaVersion:1.7.2"
     testCompile 'junit:junit:4.10'
 }
