--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ dependencies {
 }
 
 tasks.withType(ScalaCompile) {
-    scalaCompileOptions.useAnt = false
-    scalaCompileOptions.fork = true
+    if ((gradle.gradleVersion <=> '1.3') >= 0) {
+        // set scalaCompileOptions for gradle 1.3 and above
+        scalaCompileOptions.useAnt = false
+        scalaCompileOptions.fork = true
+    }
 }
 
 jar {
